# simbld-auth

./: .gitignore  .sqlxrc  Cargo.toml  HTTP.md  PSQL.md  README.md  ROUTES.md  requests.http  requests_mock.http  rustfmt.toml
documentation/: migration_guide.md
migrations/: 0001_create-users.up.sql  0001_create-users_up.sql  0002_create_roles_up.sql  0003_create_refresh_tokens_up.sql  0004_create_oauth_providers.down.sql  0004_create_oauth_providers.up.sql  0005_create_login_attempts.up.sql  0006_create-password-reset-tokens.up.sql  0007_create_sessions_table.up.sql  0008_create_mfa_methods_table.up.sql  0008_create_mfa_methods_table_down.sql  0008_create_mfa_methods_table_up.sql  0009_create_backup_codes_table.down.sql  0009_create_backup_codes_table.up.sql  0009_create_backup_codes_table_up.sql  0010_create_webauthn_credentials_table.down.sql  0010_create_webauthn_credentials_table.up.sql  0011_update_users_table_password_security.down.sql  0011_update_users_table_password_security.up.sql
migrations/migrations/: 0012_create_email_mfa_tables.down.sql  0012_create_email_mfa_tables.up.sql
src/: config.rs  database.rs  health.rs  lib.rs  main.rs  mock_handlers.rs  simple_health.rs  types.rs
src/auth/: auth_controller.rs  auth_dto.rs  auth_repository.rs  auth_routes.rs  auth_service.rs  client_oauth.rs  dto.rs  entities.rs  handlers.rs  jwt.rs  mfa.rs  middleware.rs  mod.rs  models.rs  oauth.rs  routes.rs  service.rs  session.rs
src/auth/mfa/: backup_codes.rs  dto.rs  email.rs  mod.rs  push.rs  recovery.rs  sms.rs  totp.rs  webauthn.rs
src/auth/password/: generator.rs  mod.rs  reset.rs  security.rs  validator.rs
src/handlers/: health.rs  mod.rs
src/mocks/: mock_client.rs  mock_handlers.rs  mock_oauth.rs  mod.rs
src/postgres/: config.rs  database.rs  mod.rs
src/protected/: mod.rs  protected_routes.rs
src/sqlx/: config.rs  database.rs
src/user/: dto.rs  error.rs  handlers.rs  mod.rs  models.rs  repository.rs  routes.rs  service.rs  user_controller.rs  user_repository.rs  user_routes.rs  user_service.rs
src/utils/: error_handler.rs  error_response_trait.rs  mod.rs  password_controller.rs  password_validator.rs  response_handler.rs
src/utils/password/: controller.rs  generator.rs  mod.rs  reset.rs  routes.rs  security.rs  validator.rs
tests/: auth_integration_tests.rs  mod.rs
