[package]
name = "simbld-auth"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simbld_auth"
path = "src/main.rs"

[dependencies]
actix-web = { version = "4.9.0", features = ["cookies"] }
actix-cors = "0.7.0"
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-postgres = { version = "0.7.12", features = ["with-uuid-0_8"] }
deadpool-postgres = "0.14.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
regex = "1.11.1"
rand = "0.9.1"
dotenvy = "0.15.7"
async-trait = "0.1.83"
thiserror = "2.0.8"
log = "0.4.22"
futures-util = "0.3.31"
env_logger = "0.11.6"
simbld-http = "1.0.0"
oauth2 = "5.0.0"
reqwest = { version = "0.12.9", features = ["json"] }
sha1 = "0.10.6"
hmac = "0.12.1"
base32 = "0.5.1"
base64 = "0.22.1"
qrcode = { version = "0.14.1", features = ["svg"] }
webauthn-rs = "0.5.1"
url = "2.5.4"
mockall = "0.13.1"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
http = "1.3.1"
once_cell = "1.20.2"
urlencoding = "2.1.3"
postgres-native-tls = "0.5.0"
futures = "0.3.31"
tower = "0.5.2"
hyper = "1.6.0"

