[package]
name = "simbld-auth"
version = "0.1.0"
edition = "2021"

# Multiple binaries
[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "simple_mock"
path = "src/bin/simple_mock.rs"

[[bin]]
name = "mock_server"
path = "src/bin/mock_server.rs"

[dependencies]
actix-web = { version = "4.11.0", features = ["cookies"] }
tokio = { version = "1.45.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate", "macros"] }
thiserror = "2.0.12"
dotenvy = "0.15.7"
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.39", features = ["serde"] }
# tokio-postgres = { version = "0.7.12", features = ["with-uuid-0_8"] }
# deadpool-postgres = "0.14.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
regex = "1.11.1"
rand = { version = "0.9.1", features = ["std_rng"] }
async-trait = "0.1.83"
log = "0.4.22"
futures-util = "0.3.31"
env_logger = "0.11.6"
simbld-http = "1.0.0"
oauth2 = "5.0.0"
reqwest = { version = "0.12.9", features = ["json"] }
sha1 = "0.10.6"
hmac = "0.12.1"
base32 = "0.5.1"
base64 = "0.22.1"
qrcode = { version = "0.14.1", features = ["svg"] }
# webauthn-rs = "0.5.1"
url = "2.5.4"
# mockall = "0.13.1"
# http = "1.3.1"
# once_cell = "1.20.2"
# urlencoding = "2.1.3"
# sqlx-native-tls = "0.5.0"
# futures = "0.3.31"
# tower = "0.5.2"
# hyper = "1.6.0"
# bcrypt = "0.15"
# zeroize = "1.7"
# actix-cors = "0.7.0"
# secrecy = { version = "0.10.3", features = ["serde"] }
num_cpus = "1.16.0"
# validator = { version = "0.20.0", features = ["derive"] }
gethostname = "1.0.2"
hex = "0.4"
sha2 = "0.10"
# lazy_static = "1.5.0"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }

